--- a/css/styles.css
+++ b/css/styles.css
@@ -122,11 +122,14 @@ li {
 }
 
 li>a {
-    color: #000;
+    width: 100%;
     display: block;
+}
+
+li>a, .editable {
+    color: #000;
     padding: 5px;
     text-decoration: none;
-    width: 100%;
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     box-flex: 1;
@@ -180,18 +183,20 @@ li>a.tappable-active {
 
 h1 {
     font-size: 18px;
-    padding: 20 0 0 0;
+    padding: 10 0 0 0;
     margin: 0px;
 }
 
-h2 {
+h2, .dim {
     font-size: 16px;
     font-weight: normal;
     padding: 0px;
     margin: 0px;
+	color: #ccc;
 }
 
 .header input { width: 105px; height:30px; }
+.editable input { width: 120px; height:25px; }
 
 .employee-image {
     float:left;
@@ -210,6 +215,7 @@ h2 {
     right: 0px;
 }
 
+.editable { width:auto; }
 .editable input { display:none; }
 .editable.edit-mode input { display: inherit; }
 .editable.edit-mode span { display: none; }
