--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,18 @@ html {
 
 body {
     font-family: source-sans-pro, serif;
-    font-size: 16px;
+    font-size: 18px;
     margin: 0;
     padding: 0;
     height: 100%;
     background-color: #fff;
     overflow: hidden;
     position: relative;
+	background-image:url(../img/background.jpg);
 }
 
 .header {
-    background: #666;
+    background: /*#666*/ Orange;
     -webkit-background-size: 1px 44px;
     -moz-background-size: 1px 44px;
     -ms-background-size: 1px 44px;
@@ -23,7 +24,7 @@ body {
     height: 44px;
     line-height: 44px;
     width: 100%;
-    color: #fff;
+    color: /*#fff*/ Green;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
     border-bottom: solid 1px #eee;
@@ -32,7 +33,7 @@ body {
 .header h1 {
     padding: 0;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     margin: 0;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -67,14 +68,14 @@ body {
     margin-bottom: 6px;
     border-bottom: solid 1px #666;
 }
-
+input {  border-radius: 5px; }
 input[type="search"] {
     width:100%;
 	border: none;
 	border-radius: 4px;
 	padding: 4px 0px 2px 2px;
 	margin-top: 0px;
-	font-size: 16px;
+	font-size: 18px;
 	box-shadow: inset 0 2px 2px rgba(0,0,0,.5), 0 1px #fff;
 	background: #eee;
     -webkit-appearance:none;
@@ -89,7 +90,7 @@ ul {
     margin: 0;
     padding: 0;
     list-style: none;
-    background-color: #fafafa;
+    /*background-color: #fafafa;*/
     border-bottom: 1px solid #e0e0e0;
 }
 
@@ -98,14 +99,14 @@ li {
     border-top: 1px solid #c0c0c0;
     padding: 10px;
 }
-
+/*
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
     background-color: #fff;
     border-bottom: 1px solid #e0e0e0;
-}
+}*/
 
 li {
     display: block;
@@ -121,10 +122,6 @@ li {
     width: 100%;
 }
 
-li>a {
-    width: 100%;
-    display: block;
-}
 
 li>a, .editable {
     color: #000;
@@ -145,13 +142,22 @@ li>a, .editable {
     background-size: 10px 100%;
 }
 
+li>a {
+    color: #fff;
+    width: 100%;
+    display: block;
+	font-weight: bold;
+	padding-left: 75px;
+}
+
 li>a * {
     pointer-events: none;
 }
 
 li>a.tappable-active {
-    color: #fff;
-    background-color: #4286f5;
+    /*background-color: #4286f5;*/
+	padding-left: 80px;
+	font-weight: bolder;
 }
 
 .button {
@@ -168,7 +174,7 @@ li>a.tappable-active {
 	border:1px solid #dcdcdc;
 	display:inline-block;
 	color:#666666;
-	font-size:14px;
+	font-size:15px;
 	text-decoration:none;
 	text-shadow:1px 1px 0px #ffffff;
 }
@@ -182,20 +188,20 @@ li>a.tappable-active {
 }
 
 h1 {
-    font-size: 18px;
+    font-size: 20px;
     padding: 10 0 0 0;
     margin: 0px;
 }
 
 h2, .dim {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: normal;
     padding: 0px;
     margin: 0px;
 	color: #ccc;
 }
 
-.header input { width: 105px; height:30px; }
+.header input { width: 90px; height:30px; }
 .editable input { width: 120px; height:25px; }
 
 .employee-image {
@@ -219,3 +225,19 @@ h2, .dim {
 .editable input { display:none; }
 .editable.edit-mode input { display: inherit; }
 .editable.edit-mode span { display: none; }
+
+.pin input, input.pin { -webkit-text-security: disc; text-security: disc; }
+ul { width:100%; }
+ul .editable input { display:inherit; margin-left: 10px;}
+ul .editable span { display: none; }
+ul .editable b { display: inline-block; width:90px;; }
+.billpayment, .topup, .transfer {
+	background-position: 2px center;
+	background-repeat: no-repeat;
+	background-size: 69px 56px;
+	/*padding: 15px 0px;*/
+}
+
+.billpayment { background-image: url(../img/billpayment_button.png); }
+.topup { background-image: url(../img/topup_button.png); }
+.transfer { background-image: url(../img/funds_transfer_button.png); }
